welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse()
{
  while(getCouleurSol()!=color.red)
  {
    avance()
    avance()
    gauche()
  }
}